--- a/tags/config.json
+++ b/tags/config.json
@@ -1,28 +1,15 @@
 {
-	"tagFile": "danbooru.csv",
+	"tagFile": "danbooru2.csv",
 	"activeIn": {
 		"txt2img": true,
 		"img2img": true,
 		"negativePrompts": true
 	},
-	"maxResults": 5,
-	"resultStepLength": 500,
-	"delayTime": 100,
-	"showAllResults": false,
-	"useLeftRightArrowKeys": false,
+	"maxResults": 8,
 	"replaceUnderscores": true,
 	"escapeParentheses": true,
-	"appendComma": true,
 	"useWildcards": true,
 	"useEmbeddings": true,
-	"translation": {
-		"searchByTranslation": true,
-		"onlyShowTranslation": false
-	},
-	"extra": {
-		"extraFile": "",
-		"onlyTranslationExtraFile": false
-	},
 	"colors": {
 		"danbooru": {
 			"0": ["lightblue", "dodgerblue"],
