--- a/tags/config.json
+++ b/tags/config.json
@@ -6,10 +6,21 @@
 		"negativePrompts": true
 	},
 	"maxResults": 8,
+	"resultStepLength": 500,
+	"showAllResults": false,
+	"useLeftRightArrowKeys": false,
 	"replaceUnderscores": true,
 	"escapeParentheses": true,
 	"useWildcards": true,
 	"useEmbeddings": true,
+	"translation": {
+		"searchByTranslation": true,
+		"onlyShowTranslation": false
+	},
+	"extra": {
+		"extraFile": "",
+		"onlyTranslationExtraFile": false
+	},
 	"colors": {
 		"danbooru": {
 			"0": ["lightblue", "dodgerblue"],
