--- a/tags/config.json
+++ b/tags/config.json
@@ -1,12 +1,12 @@
 {
-	"tagFile": "danbooru.csv",
+	"tagFile": "danbooru2.csv",
 	"activeIn": {
 		"txt2img": true,
 		"img2img": true,
 		"negativePrompts": true
 	},
 	"hideUIOptions": false,
-	"maxResults": 5,
+	"maxResults": 8,
 	"resultStepLength": 500,
 	"delayTime": 100,
 	"showAllResults": false,
